--- a/gfxboot-cfg/isolinux.cfg
+++ b/gfxboot-cfg/isolinux.cfg
@@ -1,14 +1,14 @@
 DEFAULT /casper/vmlinuz
 GFXBOOT bootlogo
-APPEND   boot=casper initrd=/casper/initrd.gz quiet splash --
+APPEND  file=/cdrom/preseed/bardinux.seed boot=casper initrd=/casper/initrd.gz quiet splash --
 LABEL live
   menu label ^Try Bardinux without installing
   kernel /casper/vmlinuz
-  append   boot=casper initrd=/casper/initrd.gz quiet splash --
+  append  file=/cdrom/preseed/bardinux.seed boot=casper initrd=/casper/initrd.gz quiet splash --
 LABEL live-install
   menu label ^Install Bardinux
   kernel /casper/vmlinuz
-  append   boot=casper only-ubiquity initrd=/casper/initrd.gz quiet splash --
+  append  file=/cdrom/preseed/bardinux.seed boot=casper only-ubiquity initrd=/casper/initrd.gz quiet splash --
 #LABEL check
 #  menu label ^Check CD for defects
 #  kernel /casper/vmlinuz
